# phybench-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  api_run.py  api_run_para.py  config.ini.sample  config.toml.sample  config_loader.py  generate_config_sample.py  main.py  mypy.ini  pyproject.toml  requirements.txt
grading/: EED.py  extended_zss.py  grading.py  latex_pre_process.py  readme.txt  sandbox.py  validator.py  validator_logs.txt
phybench/: config_loader.py  logging_config.py  path_resolver.py  settings.py
phybench/api_caller/: __main__.py  api_config.py  client.py  main.py
phybench/evaluation/: __main__.py  evaluation_config.py  expression_distance.py  latex_processor.py  main.py  validator.py
phybench/model_judge/: README.md  __main__.py  client.py  main.py
scripts/api_caller/: __init__.py  __main__.py  api_config.py  client.py  main.py
scripts/api_callers/: __init__.py  api_utils.py  config.py  parallel_caller.py
scripts/evaluation/: __init__.py  __main__.py  evaluation_config.py  expression_distance.py  latex_processor.py  main.py  tree_distance.py  validator.py
scripts/grading/: __init__.py  __main__.py  config.py  extended_zss.py  grading.py  latex_pre_process.py  validator.py
tests/: __init__.py
tests/evaluation/: __init__.py  demo_comprehensive.py  run_tests.py  test_cli_consistency.py  test_complex_infinity.py  test_expression_distance.py  test_imaginary_unit.py  test_latex_processor.py  test_path_handling.py  test_regression_issues.py  test_timeout_handling.py
