[project]
name = "phybench-pipeline"
version = "0.1.0"
description = "A comprehensive LLM performance evaluation pipeline that generates model solutions and evaluates them using expression edit distance (EED) metrics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "latex2sympy2-extended>=1.10.1",
    "numpy>=2.2.6",
    "openai>=1.83.0",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "timeout-decorator>=0.5.0",
    "tqdm>=4.67.1",
]
