[project]
name = "phybench-pipeline"
version = "0.1.0"
description = "A comprehensive LLM performance evaluation pipeline that generates model solutions and evaluates them using expression edit distance (EED) metrics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "latex2sympy2-extended>=1.10.1",
    "numpy>=2.2.6",
    "openai>=1.83.0",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "timeout-decorator>=0.5.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["scripts"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
